# AnkiTools

./: .gitignore  .travis.yml  Pipfile  README.md  conftest.py  example.py  osx.command  pyproject.toml  pytest.ini  setup.py  test.ipynb  test.py  update_pip
AnkiTools/: AnkiConnect.py  AnkiDirect.py  AnkiExcelSync.py  AnkiFormatEditor.py  __init__.py  _excel.py  ankiconnect.py  convert.py  defaults.json  defaults_api.json  defaults_formatted.json  dir.py  editor.py  excel.py  serialize.py  utils.py
AnkiTools/api/: ankidirect.py  app.py  defaults.py  verify.py
AnkiTools/excel/: app.py  default.xlsx  export.py  formatter.py  params.py  template.xlsx  verify.py
AnkiTools/tools/: const.py  convert.py  create.py  defaults.py  edit.py  guid64.py  path.py  read.py  records.py  sampling.py  (+2 more)
dev/: add_info.json  append_notes.py  check_anki_defaults_is_json.py  defaults_formatted.json  generate_defaults.py  get_anki_collection.py  get_anki_defaults.py  read_excel.py  reset_anki_database.py
examples/: vocab_category.ipynb
manual/: convert.py  testfile.apkg
manual_tests/: ankiconnect.py  ankidirect.py  excel.py  read_anki.py
reader/: reader.py
test/: __init__.py  test.ipynb  test_convert.py  test_read.py
tests/: __init__.py  config.py  dir.py  files.py  getfile.py  parameters.json  test_ankiconnect.py  test_ankidirect.py  test_convert.py
tests_manual/: test_ankidirect.py  test_convert.py  test_excel.py  test_get_collection_path.py  test_tools_create.py  verify.py
tools/: const.py  create.py  edit.py  read.py
tryout/: read_excel.py  test.json  tryout.py
(+4 files in other folders)
