[tool.poetry]
name = "AnkiTools"
version = "0.3.3"
description = "an Anki *.apkg and collection.anki2 reader and editor"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ['anki', 'ankiconnect']
include = ["AnkiTools/*.json", "AnkiTools/*.anki2"]
repository = "https://github.com/patarapolw/AnkiTools"
homepage = "https://github.com/patarapolw/AnkiTools"

[tool.poetry.dependencies]
python = ">=3.5"
requests = "^2.19"
bs4 = "^0.0.1"
appdirs = "^1.4"
openpyxl = "^2.5"
psutil = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-readme = "^1.0"
python-dotenv = "^0.8.2"
